examples/server/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trustformers-server
  namespace: trustformers
  labels:
    app: trustformers-server
    app.kubernetes.io/name: trustformers-server
    app.kubernetes.io/instance: trustformers
    app.kubernetes.io/component: api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: trustformers-server
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
